--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en,fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -14,6 +14,9 @@
         content="Longfort Consulting provides regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
         Leverage our guidance in oncology, immunotherapy, rare diseases, paediatrics and gene therapy to achieve successful trial outcomes.
         Conduct robust clinical trials using watertight protocols and a purpose-built document package to obtain first-pass approval from regulatory authorities."/>
+    <link rel="alternate" hreflang="en" href="https://longfort-consulting.com/index.html" />
+    <link rel="alternate" hreflang="fr" href="https://longfort-consulting.com/index-fr.html" />
+    <link rel="alternate" hreflang="x-default" href="https://longfort-consulting.com/" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
@@ -42,8 +45,10 @@
                 <li class="nav-item">
                     <a href="#blog" class="nav-link">Blog</a>
                 </li>
-                <span>
-                    <a>&#127468;&#127463;</a><a>&nbsp;</a><a style="filter: grayscale(100%);brightness: 1.3;">&#127467;&#127479;</a>                    
+                <span style="opacity: 0.5; cursor: default;">
+                    <a style="filter: grayscale(100%); filter: contrast(1); filter: opacity(1);">&#127468;&#127463;</a>
+                    <a>&nbsp;</a>
+                    <a href="index-fr.html" title="Version Française" style="text-decoration: none; cursor: pointer;">&#127467;&#127479;</a>
                 </span>
             </ul>
             <button id="menu-open-button" class="fas fa-bars"></button>
