--- a/index-fr.html
+++ b/index-fr.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="only light" />
-    <meta property="og:title" content="Longfort Consulting | Clinical Studies Consultant" />
+    <meta property="og:title" content="Longfort Consulting | Consultant en essais cliniques" />
     <meta property="og:description" content="Longfort Consulting provides regulatory expertise for clinical trials approval." />    <meta property="og:image" content="https://longfort-consulting.com/ressources/socialNetworkImage.jpg" />
     <meta property="og:url" content="https://longfort-consulting.com" />
     <meta property="og:type" content="website" />
     <title>Longfort Consulting | Clinical Studies Consultant</title>
     <meta name="description"
-        content="Longfort Consulting provides regulatory expertise to secure clinical trial approval in a timely and quality-controlled manner.
-        Leverage our guidance in oncology, immunotherapy, rare diseases, paediatrics and gene therapy to achieve successful trial outcomes.
-        Conduct robust clinical trials using watertight protocols and a purpose-built document package to obtain first-pass approval from regulatory authorities."/>
+        content="Longfort Consulting apporte son expertise réglementaire pour sécuriser l'approbation de vos essais cliniques, dans le respect des délais et avec une maîtrise totale de la qualité.
+                Bénéficiez de notre accompagnement en oncologie, immunothérapie, maladies rares, pédiatrie et thérapie génique pour garantir le succès de vos essais.
+                Menez des essais cliniques solides grâce à des protocoles rigoureux et à un dossier documentaire conçu sur mesure, afin d'obtenir l'approbation des autorités réglementaires dès la première soumission."/>
     <link rel="alternate" hreflang="en" href="https://longfort-consulting.com/index.html" />
     <link rel="alternate" hreflang="fr" href="https://longfort-consulting.com/index-fr.html" />
     <link rel="alternate" hreflang="x-default" href="https://longfort-consulting.com/" />
@@ -63,9 +63,9 @@
 
                     <div class="image-slider">
                         <img id="SciImg" src="ressources/pexels-mikhail-nilov-8851547.jpg"
-                            alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
+                            alt="Deux scientifiques en blouse blanche examinant des documents, avec la mention « Clinical Trial » et des icônes associées en surimpression."
                             class="about-image image-to-cycle" />
-                        <img class="overlay" src="ressources/overlay.png" alt="Clinical Trials title" /> </div>
+                        <img class="overlay" src="ressources/overlay.png" alt="Clinical Trials" /> </div>
 
                     <!--<button class="image-nav-button next-button fas fa-chevron-right" aria-label="Next image"></button>-->
 
@@ -118,21 +118,23 @@
                     </div>
                 </div>
                 <div class="about-details">
-                    <h2 class="section-title">About Us</h2>
+                    <h2 class="section-title">Qui sommes-nous ?</h2>
                     <p class="text" style="text-align: justify; text-align: left;">
-                        Longfort Consulting provides regulatory expertise to secure clinical trial approval in a
-                        timely and quality-controlled manner.
+                        Longfort Consulting apporte son expertise réglementaire pour sécuriser
+                        l'approbation de vos essais cliniques, dans le respect des délais et
+                        avec une maîtrise totale de la qualité.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
-                        Leverage our guidance in oncology, immunotherapy, rare diseases, paediatrics
-                        and gene therapy to achieve successful trial outcomes.
+                        Bénéficiez de notre accompagnement en oncologie, immunothérapie,
+                        maladies rares, pédiatrie et thérapie génique pour garantir le succès de vos essais.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
-                        Conduct robust <b>clinical trials</b> using watertight protocols and a <b>purpose-built</b> document package
-                        to obtain <b>first-pass approval</b> from regulatory authorities.
+                       Menez des <b>essais cliniques</b> solides grâce à des protocoles rigoureux et à un dossier
+                        documentaire conçu <b>sur mesure</b>, afin d'obtenir l'<b>approbation</b> des autorités
+                        réglementaires <b>dès la première soumission</b>.
                     </p>
                     <span class="buttons">
-                        <a href="#services" class="button">Learn more</a>
+                        <a href="#services" class="button">En savoir plus</a>
                     </span>
                 </div>
             </div>
