--- a/index-fr.html
+++ b/index-fr.html
@@ -142,21 +142,21 @@
         <section id="services" class="about-section">
             <div class="section-content">
                 <div class="about-details">
-                    <h2 class="section-title">Services</h2>
+                    <h2 class="section-title">Nos services</h2>
                     <div>
                         <p class="text">
-                            <b>Turn regulatory complexity into speed.</b> Agile expertize tailored for Biotechs, MedTechs and academia.
+                            <b>Transformez la complexité réglementaire en rapidité d'exécution.</b> Une expertise agile, taillée sur mesure pour les Biotechs, les MedTechs et le secteur académique.
                         </p>
-                        <h3 class="service-heading">Regulatory Strategy</h3>
+                        <h3 class="service-heading">Stratégie Réglementaire</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Early-phase Roadmap</a>
+                                <a class="text">Feuille de route pour les phases précoces (Early-phase)</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Complex Trial Strategy</a>
+                                <a class="text">Stratégie pour essais complexes</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Submission Readiness</a>
+                                <a class="text">Préparation à la soumission</a>
                                 <span class="flyover-container">
                                     <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
@@ -168,26 +168,26 @@
                             </li>
                         </ul>
 
-                        <h3 class="service-heading">Submission & CTIS expertise</h3>
+                        <h3 class="service-heading">Expertise Soumission & CTIS</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">CTIS full support</a>
+                                <a class="text">Prise en charge intégrale du CTIS</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">ICF adaptation</a>
+                                <a class="text">Adaptation des formulaires de consentement (ICF)</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Global CA and EC submissions</a>
+                                <a class="text">Soumissions internationales aux Autorités Compétentes et Comités d'Éthique</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Lifecycle management</a>
+                                <a class="text">Suivi de projet</a>
                             </li>
                         </ul>
 
-                        <h3 class="service-heading">Agile Operational Support</h3>
+                        <h3 class="service-heading">Support</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">On-demand resources</a>
+                                <a class="text">Ressources à la demande</a>
                                 <span class="flyover-container">
                                     <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
@@ -198,17 +198,17 @@
                                 </span>
                             </li>
                             <li class="service-item">
-                                <a class="text">Workflow optimization</a>
+                                <a class="text">Optimisation des processus</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Team coordination/training</a>
+                                <a class="text">Coordination et formation des équipes</a>
                             </li>
                         </ul>
                         <p class="text">
-                            Are you ready to streamline your submission ?
+                            Prêt à fluidifier votre processus de soumission ?
                         </p>
                         <span class="buttons">
-                            <a href="#contact" class="button">Leave a message</a>
+                            <a href="#contact" class="button">Laisser un message</a>
                         </span>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                         <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
                             <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5" />
                             <div class="form-group">
-                                <label for="name">Name</label>
+                                <label for="name">Nom</label>
                                 <input type="text" id="name" name="Name" required />
                             </div>
                             <div class="form-group">
@@ -238,13 +238,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="message">Message</label>
-                                <textarea id="message" name="Message" rows="5" required contenteditable="true">I am interested in your services and would like to schedule a call.</textarea>
+                                <textarea id="message" name="Message" rows="5" required contenteditable="true">Vos services m'intéressent et je souhaiterais planifier un appel avec vous.</textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
                             <button type="submit" class="button">Send</button>
                         </form>
                         <p class="text">
-                            Have a question ? Please fill out the form just above, or feel free to contact me directly.
+                            Merci de remplir le formulaire ci-dessus, ou n'hésitez pas à me contacter directement.
                         </p>
                         <div class="social-link-list">
                             <a href="mailto:sabrina.guittard@longfort-consulting.com" class="social-link"><i
@@ -276,8 +276,8 @@
         <section class="footer-section">
             <div>
                 <div class="footer">
-                    <a>© 2025 All Rights Reserved, Longfort Consulting</a><a>|</a>
-                    <a style="color: #3b3737" href="legal.html">Legal Notice & Privacy Policy <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
+                    <a>© 2025 Tous droits réservés, Longfort Consulting</a><a>|</a>
+                    <a style="color: #3b3737" href="legal.html">Mentions légales & Politique de confidentialité <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
                     <a>🍪Cookie-free</a><a>|</a>
                     <a>🌿0.05g CO²/visit</a>
                 </div>
