--- a/index-fr.html
+++ b/index-fr.html
@@ -150,7 +150,7 @@
                         <h3 class="service-heading">Stratégie Réglementaire</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Feuille de route pour les phases précoces (Early-phase)</a>
+                                <a class="text">Feuille de route pour les phases précoces</a>
                             </li>
                             <li class="service-item">
                                 <a class="text">Stratégie pour essais complexes</a>
@@ -187,7 +187,7 @@
                         <h3 class="service-heading">Support</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Ressources à la demande</a>
+                                <a class="text">Support à la demande</a>
                                 <span class="flyover-container">
                                     <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
