--- a/index-fr.html
+++ b/index-fr.html
@@ -145,7 +145,7 @@
                     <h2 class="section-title">Nos services</h2>
                     <div>
                         <p class="text">
-                            <b>Transformez la complexité réglementaire en rapidité d'exécution.</b> Une expertise agile, taillée sur mesure pour les Biotechs, les MedTechs et le secteur académique.
+                            Transformez la complexité réglementaire en rapidité d'exécution. Une expertise agile, taillée sur mesure pour les Biotechs, les MedTechs et le secteur académique.
                         </p>
                         <h3 class="service-heading">Stratégie Réglementaire</h3>
                         <ul class="service-list">
