--- a/index-fr.html
+++ b/index-fr.html
@@ -277,7 +277,7 @@
             <div>
                 <div class="footer">
                     <a>© 2025 Tous droits réservés, Longfort Consulting</a><a>|</a>
-                    <a style="color: #3b3737" href="legal.html">Mentions légales & Politique de confidentialité <i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
+                    <a style="color: #3b3737" href="legal.html">Mentions légales & protection des données<i class="fa fa-external-link" aria-hidden="true"></i></a><a>|</a>
                     <a>🍪Cookie-free</a><a>|</a>
                     <a>🌿0.05g CO²/visit</a>
                 </div>
