--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     </div>
                 </div>
                 <div class="about-details">
+                    <a>&nbsp;</a>
                     <h2 class="section-title">About Us</h2>
                     <p class="text" style="text-align: justify; text-align: left;">
                         Longfort Consulting provides regulatory expertise to secure clinical trial approval in a
