--- a/index-fr.html
+++ b/index-fr.html
@@ -120,17 +120,17 @@
                 <div class="about-details">
                     <h2 class="section-title">Qui sommes-nous ?</h2>
                     <p class="text" style="text-align: justify; text-align: left;">
-                        Longfort Consulting apporte son expertise réglementaire pour sécuriser
+                        Longfort Consulting apporte son expertise réglementaire pour obtenir
                         l'approbation de vos essais cliniques, dans le respect des délais et
-                        avec une maîtrise totale de la qualité.
+                        de vos standard de qualité.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
                         Bénéficiez de notre accompagnement en oncologie, immunothérapie,
                         maladies rares, pédiatrie et thérapie génique pour garantir le succès de vos essais.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
-                       Menez des <b>essais cliniques</b> solides grâce à des protocoles rigoureux et à un dossier
-                        documentaire conçu <b>sur mesure</b>, afin d'obtenir l'<b>approbation</b> des autorités
+                        Menez de solides essais cliniques grâce à des protocoles rigoureux et à un dossier
+                        documentaire conçu sur mesure, et obtenez l'<b>approbation</b> des autorités
                         réglementaires <b>dès la première soumission</b>.
                     </p>
                     <span class="buttons">
@@ -145,15 +145,15 @@
                     <h2 class="section-title">Nos services</h2>
                     <div>
                         <p class="text">
-                            Transformez la complexité réglementaire en rapidité d'exécution. Une expertise agile, taillée sur mesure pour les Biotechs, les MedTechs et le secteur académique.
+                            Une expertise taillée sur mesure pour les Biotechs, les MedTechs et le secteur académique.
                         </p>
                         <h3 class="service-heading">Stratégie Réglementaire</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Feuille de route pour les phases précoces</a>
+                                <a class="text">Planification des phases amont</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Stratégie pour essais complexes</a>
+                                <a class="text">Stratégie pour les essais complexes</a>
                             </li>
                             <li class="service-item">
                                 <a class="text">Préparation à la soumission</a>
@@ -171,23 +171,23 @@
                         <h3 class="service-heading">Expertise Soumission & CTIS</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Prise en charge intégrale du CTIS</a>
+                                <a class="text">Support à l'utilisation du système d'information</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Adaptation des formulaires de consentement (ICF)</a>
+                                <a class="text">Adaptation des formulaires de consentement</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Soumissions internationales aux Autorités Compétentes et Comités d'Éthique</a>
+                                <a class="text">Soumissions aux Autorités EU et hors-EU et aux Comités d'Éthique</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Suivi de projet</a>
+                                <a class="text">Suivi de projet en autonomie</a>
                             </li>
                         </ul>
 
                         <h3 class="service-heading">Support</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Support à la demande</a>
+                                <a class="text">Support opérationnel</a>
                                 <span class="flyover-container">
                                     <a href="ressources/StudyStartUpBoosterPortrait.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
@@ -204,9 +204,6 @@
                                 <a class="text">Coordination et formation des équipes</a>
                             </li>
                         </ul>
-                        <p class="text">
-                            Prêt à fluidifier votre processus de soumission ?
-                        </p>
                         <span class="buttons">
                             <a href="#contact" class="button">Laisser un message</a>
                         </span>
