--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h2 class="section-title">Services</h2>
                     <div>
                         <p class="text">
-                            <b>Turn regulatory complexity into speed.</b> Agile expertize tailored for Biotechs, MedTechs and academia.
+                            Expertize tailored for Biotechs, MedTechs and academia.
                         </p>
                         <h3 class="service-heading">Regulatory Strategy</h3>
                         <ul class="service-list">
