--- a/index-fr.html
+++ b/index-fr.html
@@ -120,16 +120,16 @@
                 <div class="about-details">
                     <h2 class="section-title">Qui sommes-nous ?</h2>
                     <p class="text" style="text-align: justify; text-align: left;">
-                        Longfort Consulting apporte son expertise réglementaire pour obtenir
-                        l'approbation de vos essais cliniques, dans le respect des délais et
-                        de vos standard de qualité.
+                        Longfort Consulting vous apporte son expertise afin d'obtenir
+                        l'approbation de vos essais cliniques, dans le respect de vos délais et
+                        de vos standards de qualité.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
                         Bénéficiez de notre accompagnement en oncologie, immunothérapie,
                         maladies rares, pédiatrie et thérapie génique pour garantir le succès de vos essais.
                     </p>
                     <p class="text" style="text-align: justify; text-align: left;">
-                        Menez de solides essais cliniques grâce à des protocoles rigoureux et à un dossier
+                        Menez de solides essais grâce à des protocoles rigoureux et à un dossier
                         documentaire conçu sur mesure, et obtenez l'<b>approbation</b> des autorités
                         réglementaires <b>dès la première soumission</b>.
                     </p>
@@ -150,13 +150,13 @@
                         <h3 class="service-heading">Stratégie Réglementaire</h3>
                         <ul class="service-list">
                             <li class="service-item">
-                                <a class="text">Planification des phases amont</a>
+                                <a class="text">Planification des phases initiales</a>
                             </li>
                             <li class="service-item">
                                 <a class="text">Stratégie pour les essais complexes</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Préparation à la soumission</a>
+                                <a class="text">Préparation de la soumission</a>
                                 <span class="flyover-container">
                                     <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" class="pdf-link">
                                         <i class="fa-solid fa-link"></i>
@@ -177,10 +177,10 @@
                                 <a class="text">Adaptation des formulaires de consentement</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Soumissions aux Autorités EU et hors-EU et aux Comités d'Éthique</a>
+                                <a class="text">Soumissions aux Autorités Règlementaire et aux Comités d'Éthique</a>
                             </li>
                             <li class="service-item">
-                                <a class="text">Suivi de projet en autonomie</a>
+                                <a class="text">Gestion du projet</a>
                             </li>
                         </ul>
 
