--- a/index-fr.html
+++ b/index-fr.html
@@ -56,6 +56,8 @@
     </header>
     <main class="main">
         <section id="about" class="about-section">
+            <a>&nbsp;</a>
+            <a>&nbsp;</a>
             <div class="section-content">
                 <div class="about-image-wrapper image-gallery-wrapper">
 
