--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
                 </div>
             </div>
         </section>
-        <section id="services" class="about-section">
+        <a id="services">&nbsp;</a>
+        <section class="about-section">
             <div class="section-content">
                 <div class="about-details">
                     <h2 class="section-title">Services</h2>
