--- a/index-fr.html
+++ b/index-fr.html
@@ -55,6 +55,7 @@
         </nav>
     </header>
     <main class="main">
+        <p>&nbsp;</p>
         <section id="about" class="about-section">
             <div class="section-content">
                 <div class="about-image-wrapper image-gallery-wrapper">
