--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </nav>
         </header>
         <main class="main">
+            <p>&nbsp;</p>
             <section id="about" class="about-section">
                 <div class="section-content">
                     <div class="about-image-wrapper image-gallery-wrapper">
