--- a/index-fr.html
+++ b/index-fr.html
@@ -239,7 +239,7 @@
                                 <textarea id="message" name="Message" rows="5" required contenteditable="true">Vos services m'intéressent et je souhaiterais planifier un appel avec vous.</textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
-                            <button type="submit" class="button">Send</button>
+                            <button type="submit" class="button">Envoyer</button>
                         </form>
                         <p class="text">
                             Merci de remplir le formulaire ci-dessus, ou n'hésitez pas à me contacter directement.
