--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
         <link rel="stylesheet" href="style.css" />
+        <script src="https://github.com/ninefortyonestudio/uxnote/releases/download/v1.0.0/uxnote.min-v1.0.0.js"></script> 
     </head>
 
     <body>
@@ -341,3 +342,4 @@ I am interested in your services and would like to schedule a call.</textarea
         <script src="script.js"></script>
     </body>
 </html>
+
