Change button text from 'Laisser un message' to 'Nous contacter'

--- a/index-fr.html
+++ b/index-fr.html
@@ -207,7 +207,7 @@
                             </li>
                         </ul>
                         <span class="buttons">
-                            <a href="#contact" class="button">Laisser un message</a>
+                            <a href="#contact" class="button">Nous contacter</a>
                         </span>
                     </div>
                 </div>
